Revision history for Perl extension Net::SSLeay.

1.91_02 2021-12-29
	- On OpenVMS, detect vendor SSL111 product based on OpenSSL 1.1.x.
	- Cast the return value of OCSP_SINGLERESP_get0_id to fix a
	  const/non-const mismatch warning that broke the build on OpenVMS.
	- Create SSL_CTXs with Test::Net::SSLeay's new_ctx() function for tests that
	  are broken with LibreSSL 3.2. Partially fixes GH-232.
	- In 36_verify.t, account for the presence of the X509_V_FLAG_LEGACY_VERIFY
	  flag (signalling the use of the legacy X.509 verifier) in LibreSSL 3.2
	  versions from 3.2.4 onwards. Fixes the remainder of GH-232.
	- Note in the Net::SSLeay documentation that the TLS 1.3 implementation in
	  LibreSSL 3.1 - 3.3, parts of which are enabled by default, is not
	  libssl-compatible. See the "KNOWN BUGS AND CAVEATS" section of
	  lib/Net/SSLeay.pod for details.
	- Add constants for, but not limited to,
	  SSL_CTX_set_msg_callback and SSL_set_msg_callback functions:
	  SSL3_RT_* for record content types, SSL3_MT_* for Handshake
	  and ChangeCipherSpec message types, SSL2_VERSION to
	  complement the list of existing SSL and TLS version
	  constants and SSL2_MT_* for SSLv2 Handshake messages.
	- Expose SSL_CTX_set_keylog_callback and
	  SSL_CTX_get_keylog_callback available with OpenSSL 1.1.1pre1
	  and later.
	- Enhance 10_rand.t RAND_file_name tests: tests are no longer
	  affected by the runtime environment variables, HOME and
	  RANDFILE. These variables are insted controlled by the tests
	  with local %ENV. Problems related to RAND_file_name were
	  discussed in Github issue GH-152, and there might still be
	  cases when, for example, setuid is used because of OpenSSL's
	  use of glibc secure_getenv() and related functions. Address
	  RAND_file_name differences between OpenSSL versions. Note in
	  SSLeay.pod that RAND_file_name() can return undef with
	  LibreSSL and recent OpenSSL versions.
	- Removed the following exportable symbols from SSLeay.pm: